start hacking out the stuff that's now in lib kestrel.